--- a/src/jaaer/formIngresarEmpleado.form
+++ b/src/jaaer/formIngresarEmpleado.form
@@ -53,7 +53,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace pref="80" max="32767" attributes="0"/>
+                  <EmptySpace pref="76" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="lblTituloElCliente" min="-2" pref="260" max="-2" attributes="0"/>
@@ -68,8 +68,8 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtId" min="-2" pref="123" max="-2" attributes="0"/>
                                       <Component id="cboEmpleado" min="-2" pref="319" max="-2" attributes="0"/>
+                                      <Component id="txtId" min="-2" pref="212" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Component id="lblPuesto" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -87,10 +87,11 @@
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="cboPuesto" min="-2" pref="319" max="-2" attributes="0"/>
-                                      <Component id="txtSueldo" min="-2" pref="325" max="-2" attributes="0"/>
+                                      <Component id="txtSueldo" min="-2" pref="216" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
+                          <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -123,7 +124,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
                   <Component id="btnIngresarCliente" min="-2" pref="41" max="-2" attributes="0"/>
-                  <EmptySpace pref="58" max="32767" attributes="0"/>
+                  <EmptySpace pref="56" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -210,17 +211,6 @@
             <Property name="text" type="java.lang.String" value="Empleado:"/>
           </Properties>
         </Component>
-        <Component class="principal.MaterialTextField" name="txtSueldo">
-          <Properties>
-            <Property name="text" type="java.lang.String" value=" "/>
-            <Property name="selectionColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="66" red="ff" type="rgb"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSueldoActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JComboBox" name="cboPuesto">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -252,6 +242,8 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Puesto:"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="txtSueldo">
         </Component>
       </SubComponents>
     </Container>
