--- a/src/jaaer/frmBusquedaListaEmpleado.form
+++ b/src/jaaer/frmBusquedaListaEmpleado.form
@@ -198,10 +198,10 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="principal.MaterialTextField" name="txtIdEmpleado">
+        <Component class="javax.swing.JTextField" name="txtIdEmpleado">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="300" y="110" width="180" height="40"/>
+              <AbsoluteConstraints x="290" y="110" width="190" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
